@@ -1,5 +1,8 @@
 2009-01-06  Donal K. Fellows  <dkf@users.sf.net>
 
+	* generic/tclOOInfo.c (InfoObjectMethodsCmd,InfoClassMethodsCmd): Only
+	delete pointers that were actually allocated! [Bug 2489836]
+
 	* generic/tclOO.c (TclNRNewObjectInstance, Tcl_NewObjectInstance):
 	Perform search for existing commands in right context. [Bug 2481109]
 
